engine-net-2/examples/Errors/FunctionParametersInTypeMismatch.grs
new graph "Rules.grg"

exec { d:double=f("42") }

quit
